--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -1,18 +1,18 @@
-.page {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 50px;
+// .page {
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: center;
+//   align-items: center;
+//   gap: 50px;
 
-  min-height: 100vh;
-  font-family: sans-serif;
+//   min-height: 100vh;
+//   font-family: sans-serif;
 
-  background-color: #292932;
-}
+//   background-color: #292932;
+// }
 
-.page-title {
-  font-size: 96px;
-  font-weight: 600;
-  color: #fafafb;
-}
+// .page-title {
+//   font-size: 96px;
+//   font-weight: 600;
+//   color: #fafafb;
+// }
