--- a/src/scss/--examples--/lesson-05/_button.scss
+++ b/src/scss/--examples--/lesson-05/_button.scss
@@ -1,4 +1,8 @@
-@use "btn-scema" as vars;
+@use "btn-scema" as vars with (
+  $font-size: 10px,
+  $btn-color: black,
+  $btn-bgcolor: lightblue
+);
 
 .small-btn {
   font-size: vars.$font-size;
