--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,5 +7,5 @@
 @use "--examples--/lesson-05/variables";
 /* END */
 @use "--examples--/lesson-05/base";
-@use "--examples--/lesson-05/btn-scema";
+// @use "--examples--/lesson-05/btn-scema";
 @use "--examples--/lesson-05/button";
