--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,5 +10,7 @@
 // // @use "--examples--/lesson-05/btn-scema";
 // @use "--examples--/lesson-05/button";
 
-@use "--examples--/lesson-06/nesting";
-@use "--examples--/lesson-06/combinators";
+// @use "--examples--/lesson-06/nesting";
+// @use "--examples--/lesson-06/combinators";
+
+@use "--examples--/lesson-09/extend";
