--- a/src/scss/--examples--/lesson-09/_extend.scss
+++ b/src/scss/--examples--/lesson-09/_extend.scss
@@ -1,5 +1,12 @@
 /*Approach 1 */
-
+.main-wrap {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  width: 480px;
+  padding: 20px;
+}
 .notification {
   display: flex;
   align-items: center;
