--- a/src/scss/--examples--/lesson-10/_mixins.scss
+++ b/src/scss/--examples--/lesson-10/_mixins.scss
@@ -1,104 +1,104 @@
-@mixin frame-size($width, $height: $width) {
-  width: $width;
-  height: $height;
-}
+// @mixin frame-size($width, $height: $width) {
+//   width: $width;
+//   height: $height;
+// }
 
-%size {
-  width: 150px;
-  height: 150px;
-}
+// %size {
+//   width: 150px;
+//   height: 150px;
+// }
 
-.avatar {
-  @include frame-size(150px);
-  @extend %size;
+// .avatar {
+//   @include frame-size(150px);
+//   @extend %size;
 
-  border-radius: 50%;
-}
+//   border-radius: 50%;
+// }
 
-.icon {
-  @include frame-size(50px);
-  @extend %size;
+// .icon {
+//   @include frame-size(50px);
+//   @extend %size;
 
-  border: 2px solid lightblue;
-}
+//   border: 2px solid lightblue;
+// }
 
-// Arguments
-@mixin position-center {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
+// // Arguments
+// @mixin position-center {
+//   position: absolute;
+//   top: 50%;
+//   left: 50%;
+//   transform: translate(-50%, -50%);
+// }
 
-.decoration {
-  @include position-center;
-}
+// .decoration {
+//   @include position-center;
+// }
 
-@mixin position($position-type, $position-x, $position-y, $offset-x, $offset-y) {
-  position: $position-type;
-  top: $position-y;
-  left: $position-x;
-  transform: translate($offset-x, $offset-y);
-}
+// @mixin position($position-type, $position-x, $position-y, $offset-x, $offset-y) {
+//   position: $position-type;
+//   top: $position-y;
+//   left: $position-x;
+//   transform: translate($offset-x, $offset-y);
+// }
 
-.decoration {
-  @include position(absolute, 50%, 50%, -50%, -50%);
-}
+// .decoration {
+//   @include position(absolute, 50%, 50%, -50%, -50%);
+// }
 
-@mixin position(
-  $layer-index,
-  $display,
-  // обовʼязковий параметр
-  $position-type: absolute,
-  $position-x: 50%,
-  $position-y: $position-x,
-  $offset-x: $position-x,
-  $offset-y: $position-x
-) {
-  position: $position-type;
-  top: $position-y;
-  left: $position-x;
-  transform: translate(($offset-x * -1), ($offset-y * -1));
-  z-index: $layer-index;
-  display: $display;
-}
+// @mixin position(
+//   $layer-index,
+//   $display,
+//   // обовʼязковий параметр
+//   $position-type: absolute,
+//   $position-x: 50%,
+//   $position-y: $position-x,
+//   $offset-x: $position-x,
+//   $offset-y: $position-x
+// ) {
+//   position: $position-type;
+//   top: $position-y;
+//   left: $position-x;
+//   transform: translate(($offset-x * -1), ($offset-y * -1));
+//   z-index: $layer-index;
+//   display: $display;
+// }
 
-.decoration {
-  @include position($offset-y: 70%, $layer-index: 100, $display: block);
-}
+// .decoration {
+//   @include position($offset-y: 70%, $layer-index: 100, $display: block);
+// }
 
-%btn {
-  font-family: Montserrat;
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 20px; /* 142.857% */
-  letter-spacing: 0.5px;
-  color: #fafafb;
+// %btn {
+//   font-family: Montserrat;
+//   font-size: 14px;
+//   font-weight: 500;
+//   line-height: 20px; /* 142.857% */
+//   letter-spacing: 0.5px;
+//   color: #fafafb;
 
-  background-color: #f07f2e;
-  border: none;
-  cursor: pointer;
-  transition: 300ms;
+//   background-color: #f07f2e;
+//   border: none;
+//   cursor: pointer;
+//   transition: 300ms;
 
-  &:hover,
-  &:focus {
-    background-color: #f15c27;
-    box-shadow: 0px 4px 10px 0px rgba(240, 127, 46, 0.25);
-  }
-}
+//   &:hover,
+//   &:focus {
+//     background-color: #f15c27;
+//     box-shadow: 0px 4px 10px 0px rgba(240, 127, 46, 0.25);
+//   }
+// }
 
-@mixin btn-size($args...) {
-  @for $i from 1 through length($args) {
-    #{nth($args, $i)} {
-      $factor: ($i * 4 - 4);
+// @mixin btn-size($args...) {
+//   @for $i from 1 through length($args) {
+//     #{nth($args, $i)} {
+//       $factor: ($i * 4 - 4);
 
-      @extend %btn;
+//       @extend %btn;
 
-      padding: (4px + $factor) (8px + $factor);
-      border-radius: (8px + $factor);
-    }
-  }
-}
+//       padding: (4px + $factor) (8px + $factor);
+//       border-radius: (8px + $factor);
+//     }
+//   }
+// }
 
 @include btn-size(".btn-sm", ".btn-md", ".btn-lg", ".btn-xl");
 
